--- a/client/public/stylesheets/style.css
+++ b/client/public/stylesheets/style.css
@@ -156,7 +156,7 @@ ul.list-style-disc > li {list-style-type:disc;}
 .font-size-18{ font-size:18px !important;}
 
 /*////////////////////////------BTN------ /////////////////////////////*/
-.btn{ font-weight:600;}
+.btn{ font-weight:400; padding: 4px 12px !important; }
 .btn-gray {color: #fff;background-color: #949494;border-color: #888888;}
 .btn-gray:focus,.btn-gray.focus {color: #fff; background-color: #777777;border-color: #8c8c8c;}
 .btn-gray:hover{color: #fff !important;background-color: #777777;border-color: #adadad;}
@@ -192,7 +192,7 @@ ul.list-style-disc > li {list-style-type:disc;}
 
 .left-inner-addon {position: relative;}
 .left-inner-addon input {padding-left: 25px !important;}
-.left-inner-addon i {position: absolute;padding: 10px 7px;pointer-events: none; color:#666 ; z-index: 99999;}
+.left-inner-addon i {position: absolute;padding: 9px 7px;pointer-events: none; color:#666 ; z-index: 99999;}
 .right-inner-addon {position: relative;}
 .right-inner-addon i {position: absolute;right: 0px;top: -2px;padding: 10px 12px;pointer-events: none;color:#666 ; z-index: 99;}
 .right-inner-addon .react-datepicker__input-container{width:100%;}
@@ -355,10 +355,10 @@ legend.scheduler-border { text-transform:uppercase !important;font-weight: bold 
 .view_table table th label .control__indicator{position: absolute;    left: 15px;    top:0px;}
 
 .filter-btn button{margin-right: 10px !important;padding: 3px 5px; font-size: 11px;border-radius: 3px;margin-bottom: 10px;  }
-.filter-btn a{ text-decoration: none; color:#fff; margin-right: 10px !important;padding: 3px 5px; font-size: 11px;border-radius: 3px;margin-bottom: 10px;     background-color: #fe5716;
+.filter-btn a{ text-decoration: none; color:#fff; margin-right: 10px !important;padding: 5px 8px; font-size: 11px;border-radius: 3px;margin-bottom: 10px;     background-color: #fe5716;
 border-color: #ff4800; border: 1px solid transparent; font-weight: 400;line-height: 1.42857143;text-align: center;white-space: nowrap;vertical-align: middle;}
-.filter-btn a:hover,.filter-btn a:focus,.filter-btn a:active{ color:#fff;}
-.side-filter input, select, textarea{height: 34px;padding: 6px 12px;font-size: 14px;line-height: 1.42857143;color: #555;background-color: #fff;background-image: none;border: 1px solid #ccc;border-radius: 4px;-webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075);box-shadow: inset 0 1px 1px rgba(0,0,0,.075);-webkit-transition: border-color ease-in-out .15s,-webkit-box-shadow ease-in-out .15s;-o-transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;}
+.filter-btn a:hover,.filter-btn a:focus,.filter-btn a:active{ color:#fff; text-decoration: none;}
+.side-filter input, select, textarea{height: 30px;padding: 6px 12px;font-size: 14px;line-height: 1.42857143;color: #555;background-color: #fff;background-image: none;border: 1px solid #ccc;border-radius: 4px;-webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075);box-shadow: inset 0 1px 1px rgba(0,0,0,.075);-webkit-transition: border-color ease-in-out .15s,-webkit-box-shadow ease-in-out .15s;-o-transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;}
 .side-filter .menu-bg{padding:5px 20px ;height:50px; width:100%;background-color: #f5f5f5;border: 1px solid #e3e3e3;-webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.05);box-shadow: inset 0 1px 1px rgba(0,0,0,.05);}
 
 /*======================*/
@@ -405,7 +405,7 @@ border-color: #ff4800; border: 1px solid transparent; font-weight: 400;line-heig
 .shipment .panel-default > .panel-heading a:focus,.panel-heading a:active{text-decoration:none;}
 .shipment .panel-default > .panel-heading i{color:#333;}
 .shipment .sameHeight{height:500px;}
-.shipment .textarea-note{height:200px; resize:none;}
+.shipment .textarea-note{height:200px !important; resize:none;}
 .shipment .more_load{background:#f9f9f9; color:red; padding:4px; text-align:center;}
 .nav-pills > li > a {border-radius: 0px !important;}
 
@@ -547,7 +547,7 @@ input[type=number]::-webkit-outer-spin-button {
 #hide2 .control__indicator,#hide3 .control__indicator{top: 2px;}
 
 #hide5{}
-#hide5 #customer_name{height: 25px; padding: 0px 5px;}
+#hide5 #customer_name{height: 30px; padding: 3px 5px;}
 
 .padding-50{padding-top:50px !important;}
 .padding-30{padding-top:30px !important;}
@@ -565,7 +565,7 @@ input[type=number]::-webkit-outer-spin-button {
 .customtabContent .tab-pane.active{ border-top-left-radius: 0px !important;border-top-right-radius: 0px !important;}
 
 .RailCarAdd{ border-top: 1px solid #ddd;  padding-top: 10px;}
-
+.mw-200{min-width: 200px;}
 
 
 
