--- a/client/public/stylesheets/style.css
+++ b/client/public/stylesheets/style.css
@@ -147,6 +147,10 @@ ul.list-style-disc > li {list-style-type:disc;}
 .gray_bg{background:#f8f8f8;}
 .table_head{ background: #004a98; color: #fff !important; font-weight: bold !important;}
 .orange-orange{color:#ff4800;}
+
+.header-fixed{}
+.header-fixed th{ border-right: 1px solid #ddd; min-width: 50px;}
+
 /*////////////////////////------FONT------ /////////////////////////////*/
 .font-size-11{ font-size:11px !important;}
 .font-size-12{ font-size:12px !important;}
