--- a/client/public/stylesheets/style.css
+++ b/client/public/stylesheets/style.css
@@ -575,6 +575,9 @@ input[type=number]::-webkit-outer-spin-button {
 .RailCarAdd{ border-top: 1px solid #ddd;  padding-top: 10px;}
 .mw-200{min-width: 200px;}
 
+.table>thead>tr>th {
+    background-color: #2E6DA4 !important;
+}
 
 
 
