--- a/client/public/stylesheets/style.css
+++ b/client/public/stylesheets/style.css
@@ -24,7 +24,7 @@ a:hover{text-decoration: none;color: #0b6acf;}
 p {margin: 0 0 15px 0;   display: block;}
 hr {height: 1px; background: #ccc;border: none;margin: 15px 0 15px 0;}
 .loadedContent {}
-.loadedContentNew{height:100%; min-height: 350px;	max-height : 350px !important;}
+/*.loadedContentNew{height:100%; min-height: 350px;	max-height : 350px !important;}*/
 .loadedContentNew .table{ margin-bottom: 0px !important;}
 .dataTables_info{display: none;}
 .dataTables_paginate {display: none;}
@@ -192,10 +192,13 @@ ul.list-style-disc > li {list-style-type:disc;}
 .control--checkbox .control__indicator:after {  left: 5px;  top: 1px;  width: 5px;  height: 10px;  border: solid #fff;  border-width: 0 2px 2px 0;  transform: rotate(45deg); }
 .control--checkbox input:disabled ~ .control__indicator:after {  border-color: #7b7b7b;}
 .control--radio .control__indicator:after {  left: 3px;  top: 3px;  height: 8px;  width: 8px;  border-radius: 50%;  background: #fff;}
-.control--radio input:disabled ~ .control__indicator:after {ackground: #7b7b7b;}
+.control--radio input:disabled ~ .control__indicator:after {background: #7b7b7b;}
 
 /*////////////////////////------checkbox and redio btn custom------ /////////////////////////////*/
-
+.checkBox{position: absolute; opacity: 0; height:20px !important;}
+.checkBox+label{display: block; width:16px; height:16px; float:left; cursor:pointer; background: #fff; border: 1px solid #ccc; margin:0px !important; padding:0px;}
+.checkBox:checked+label{background: #004a98; position: relative; border-color:#004a98}
+.checkBox:checked+label:before{position: absolute; color:#fff; font:normal normal normal 12px/1 FontAwesome; content:"\f00c"; top:1px; left:1px;}
 
 
 .left-inner-addon {position: relative;}
@@ -547,7 +550,6 @@ input[type=number]::-webkit-outer-spin-button {
 /*============================================================*/
 
 
-
 .tableViewDragQvList{ max-height: 350px; overflow: auto;}
 
 #hide2{margin-top: -43px;}
@@ -555,7 +557,7 @@ input[type=number]::-webkit-outer-spin-button {
 #hide2 .control__indicator,#hide3 .control__indicator{top: 2px;}
 
 #hide5{}
-#hide5 #customer_name{height: 30px; padding: 3px 5px;}
+#hide5 #customer_name{padding: 3px 5px;}
 
 .padding-50{padding-top:50px !important;}
 .padding-30{padding-top:30px !important;}
@@ -585,3 +587,17 @@ input[type=number]::-webkit-outer-spin-button {
 
 
 
+.JColResizer{table-layout:fixed;}
+.JColResizer > tbody > tr > td, .JColResizer > tbody > tr > th{overflow:hidden}
+.JCLRgrips{ height:0px; position:relative;}
+.JCLRgrip{margin-left:-5px; position:absolute; z-index:5; }
+.JCLRgrip .JColResizer{position:absolute;outline:0px !important;filter:alpha(opacity=1);opacity:1;width:10px;height:100%;cursor: col-resize;top:0px}
+.JCLRgrip .JColResizer:focus{outline: 0px !important;}
+.JCLRgrip .JColResizer:before{content: ''; width:1px; height: 100%; position: absolute; left:5px; background: #aaa}
+.JCLRLastGrip{position:absolute; width:1px; }
+.JCLRgripDrag{ border-left:1px dotted black;}
+.JCLRFlex{width:auto!important;}
+.JCLRgrip.JCLRdisabledGrip .JColResizer{cursor:default; display:none;}
+
+.table {width: 1600px !important; max-width: 1600px !important;  margin-bottom: 20px;}
+.JCLRgrips{min-width: 1600px !important;}
