--- a/client/public/stylesheets/style.css
+++ b/client/public/stylesheets/style.css
@@ -11,20 +11,21 @@ Author URI: http://www.qsstechnosoft.com/
 
 /* //////////////-----new clearfix---//////////////////// */
 
-.clearfix:after {visibility: hidden;	display: block;	font-size: 0;content: " ";clear: both;height: 0;}
+.clearfix:after {visibility: hidden;display: block;	font-size: 0;content: " ";clear: both;height: 0;}
 /*.viewLoad{
 	max-height: 400px
 }*/
-
-html, body {width: 100%; height:100%;}
+.wrapper-inner{overflow:hidden;}
+html, body {width: 100%;}
 th {position: relative; top:0px}
-body {font-size: 14px;  color: #333; margin: 0;padding: 0; width: 100%; height:100%;  font-family: 'Open Sans', sans-serif;}
+body {font-size: 14px; color: #333; margin: 0;padding: 0; width: 100%; font-family: 'Open Sans', sans-serif;}
 a {text-decoration: none;color: #004a98;}
 a:hover{text-decoration: none;color: #0b6acf;}
 p {margin: 0 0 15px 0;   display: block;}
 hr {height: 1px; background: #ccc;border: none;margin: 15px 0 15px 0;}
 .loadedContent {}
-/*.loadedContentNew{height:100%; min-height: 350px;	max-height : 350px !important;}*/
+.table-responsive.view_table.mega{height: 350px; overflow: scroll !important; min-height: 350px;}
+.loadedContentNew{ max-height: 350px;}
 .loadedContentNew .table{ margin-bottom: 0px !important;}
 .dataTables_info{display: none;}
 .dataTables_paginate {display: none;}
@@ -599,5 +600,6 @@ input[type=number]::-webkit-outer-spin-button {
 .JCLRFlex{width:auto!important;}
 .JCLRgrip.JCLRdisabledGrip .JColResizer{cursor:default; display:none;}
 
-.table {width: 1600px !important; max-width: 1600px !important;  margin-bottom: 20px;}
-.JCLRgrips{min-width: 1600px !important;}
+.table {width: 2500px !important; max-width: 2500px !important;  margin-bottom: 20px;}
+.JCLRgrips{min-width: 2500px !important;}
+#Packaging_Instruction_View tr th:first-child{width:40px !important;}
