--- a/client/public/stylesheets/style.css
+++ b/client/public/stylesheets/style.css
@@ -73,6 +73,11 @@ ul.list-style-disc > li {list-style-type:disc;}
 
 
 
+.sorting_head th{background-color: rgb(46,109,164) !important;}
+th.placeholder{background-color: rgb(46,109,164) !important;}
+
+.sorted_head tr td:first-child{position: relative;}
+
 
 /*////////////////////////------border------ /////////////////////////////*/
 /*.position{position:relative}
@@ -196,7 +201,7 @@ ul.list-style-disc > li {list-style-type:disc;}
 .control--radio input:disabled ~ .control__indicator:after {background: #7b7b7b;}
 
 /*////////////////////////------checkbox and redio btn custom------ /////////////////////////////*/
-.checkBox{position: absolute; opacity: 0; height:20px !important;}
+.checkBox{position: absolute; opacity: 0; height:20px !important; }
 .checkBox+label{display: block; width:16px; height:16px; float:left; cursor:pointer; background: #fff; border: 1px solid #ccc; margin:0px !important; padding:0px;}
 .checkBox:checked+label{background: #004a98; position: relative; border-color:#004a98}
 .checkBox:checked+label:before{position: absolute; color:#fff; font:normal normal normal 12px/1 FontAwesome; content:"\f00c"; top:1px; left:1px;}
