--- a/client/public/stylesheets/style.css
+++ b/client/public/stylesheets/style.css
@@ -570,8 +570,11 @@ input[type=number]::-webkit-outer-spin-button {
 .cLabel{padding: 0px;height: 20px;margin-bottom: 0px;}
 .mb-10{margin-bottom:10px;}
 .pr-0{}
-.noresult{ text-align:center; background: #f5f5f5 !important;height: 290px;  vertical-align: middle !important;}
+.noresult{ text-align:center; background: #f5f5f5 !important;height: 290px; max-height: 290px;  vertical-align: middle !important;}
 .noresult p{font-size: 14px!important;}
+
+.noresultdata .JCLRgrip .JColResizer:before { content: '';width: 1px;height: 100%;position: absolute;left: 5px;background: transparent !important;}
+
 
 
 .converiosnsMenu{  position: absolute;right: 0;top: -21px;}
@@ -606,6 +609,7 @@ input[type=number]::-webkit-outer-spin-button {
 .JCLRgrip.JCLRdisabledGrip .JColResizer{cursor:default; display:none;}
 
 .JColResizer.table {width: 2500px !important; max-width: 2500px !important;  margin-bottom: 20px;}
+
 .JCLRgrips{min-width: 2500px !important;}
 #Packaging_Instruction_View tr th:first-child{min-width:40px !important;}
 
