--- a/ArbulkUX/client/public/stylesheets/style.css
+++ b/ArbulkUX/client/public/stylesheets/style.css
@@ -866,3 +866,30 @@ td.rdtYear:hover {
 .wrapperModelNew ul li{padding-left:5px;}
 .wrapperModelNew .btn{min-width:100px;margin-bottom:10px;}
 .wrapperModelNew #btnAdd{margin-top:60px;}
+.checkboxCustomer:hover .displayonlyFilter{
+    visibility: visible;
+    opacity: 1;
+}
+.displayonlyFilter {
+    top: 0;
+    bottom: 0;
+    left: 0;
+    padding-left: 5px;
+    padding-right: 5px;
+    width: 45px;
+    right: 0;
+    background: rgba(29, 106, 154, 0.72);
+    color: #fff;
+    visibility: hidden;
+    opacity: 0;
+
+    /* transition effect. not necessary */
+    transition: opacity .2s, visibility .2s;
+    float:right;
+    max-width: 25%;
+    overflow:hidden;
+    text-overflow:ellipsis;
+}
+.filter_bg ul li.inline{width:100%;display:block; margin-bottom: 15px;}
+.filter_bg ul li.inline label{max-width:30px; float: left;}
+.filter_bg ul li.inline .labText{max-width:80%;text-overflow:ellipsis; overflow: hidden;}
