--- a/ArbulkUX/client/public/stylesheets/style.css
+++ b/ArbulkUX/client/public/stylesheets/style.css
@@ -252,7 +252,7 @@ footer{  width:100%; background:#eaeaea; padding:10px 0px; height: 35px;margin-t
 
 /*////////////////////////------breadcrumb------ /////////////////////////////*/
 
-.breadcrumb_bg{width:100%; height:30px; background-image: url("../img/breadcrumb.png"); background-repeat: repeat;   padding:5px 0px;  }
+.breadcrumb_bg{width:100% !important; height:30px !important; background-image: url("../img/breadcrumb.png"); background-repeat: repeat;   padding:5px 0px !important;  }
 .breadcrumb_bg i{padding:0 10px;}
 .breadcrumb_bg p{ color:#000; cursor:pointer; overflow: hidden; text-overflow: ellipsis; min-width: 302px;}
 /*////////////////////////------login------ /////////////////////////////*/
@@ -389,7 +389,7 @@ legend.scheduler-border { text-transform:uppercase !important;font-weight: bold 
 .side-filter a{font-size:12px;}
 .side-filter h6{margin:0px;color:#000; text-align:left; font-size: 13px;font-weight: 500;}
 .filter_bg ul, ul li{ list-style:none; padding-left:0px; margin-left:0px; }
-.filter_bg ul, ul li .control{ margin-bottom:10px;  font-weight:400 !important;font-size:12px;}
+.filter_bg ul, ul li .control{ margin-bottom:10px;  font-weight:400 !important;font-size:12px !important;}
 .filter_bg  #search {padding-top: 25px;}
 .filter_bg .scroll{ overflow:auto; height:200px; overflow-x:hidden;}
 .filter_bg .scrollshow{ overflow:auto;height:100%; max-height:200px; overflow-x:hidden;}
